<resources>
    <string name="app_name">Money Counter</string>
    <string name="app_version">0.1</string>
    <string name="action_settings">Settings</string>
    <string name="button_notes">Notes</string>
    <string name="button_coins">Coins</string>
    <string name="button_checks">Checks</string>
    <string name="button_add">Add</string>
    <string name="button_total">Total</string>
    <string name="enter_amount">Enter amount</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="no_entries">No quantities or amounts entered</string>
    <string name="title_activity_count_notes">Count Notes</string>
    <string name="title_activity_count_coins">Count Coins</string>
    <string name="title_activity_count_checks">Count Checks</string>
    <string name="title_activity_total">Totals</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="total">Total</string>
    <string name="grand_total">Totals</string>
    <string name="dollar_1">$1</string>
    <string name="dollar_2">$2</string>
    <string name="dollar_5">$5</string>
    <string name="dollar_10">$10</string>
    <string name="dollar_20">$20</string>
    <string name="dollar_50">$50</string>
    <string name="dollar_100">$100</string>
    <string name="dollar_500">$500</string>
    <string name="dollar_1000">$1,000</string>
    <string name="dollar_5000">$5,000</string>
    <string name="dollar_10000">$10,000</string>
    <string name="coin_1">1&#x00A2;</string>
    <string name="coin_5">5&#x00A2;</string>
    <string name="coin_10">10&#x00A2;</string>
    <string name="coin_25">25&#x00A2;</string>
    <string name="coin_50">50&#x00A2;</string>
    <string name="coin_100">100&#x00A2;</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="n10">10</string>
    <string name="n11">11</string>
    <string name="n12">12</string>
    <string name="n13">13</string>
    <string name="n14">14</string>
    <string name="n15">15</string>
    <string name="n16">16</string>
    <string name="n17">17</string>
    <string name="n18">18</string>
    <string name="n19">19</string>
    <string name="n20">20</string>
    <string name="n21">21</string>
    <string name="n22">22</string>
    <string name="n23">23</string>
    <string name="n24">24</string>
    <string name="n25">25</string>
    <string name="n26">26</string>
    <string name="n27">27</string>
    <string name="n28">28</string>
    <string name="n29">29</string>
    <string name="n30">30</string>
</resources>
