<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.NotesFragment">

    <LinearLayout
        android:id="@+id/notes_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/note_1_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:freezesText="true"
                android:hint="@string/enter_quantity"
                android:inputType="number"
                android:tag="1"
                android:textAlignment="textEnd"
                android:textSize="@dimen/text_size_large">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/dollar_1"
                android:layout_width="@dimen/text_view_prefix_width"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/note_1_quantity"
                android:layout_alignBottom="@+id/note_1_quantity"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="false"
                android:layout_gravity="end"
                android:text="@string/dollar_1"
                android:textAlignment="textEnd"
                android:textSize="@dimen/text_size_large" />
        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/note_2_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:freezesText="true"
                android:hint="@string/enter_quantity"
                android:inputType="number"
                android:tag="2"
                android:textAlignment="textEnd"
                android:textSize="@dimen/text_size_large" />

            <TextView
                android:id="@+id/dollar_2"
                android:layout_width="@dimen/text_view_prefix_width"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/note_2_quantity"
                android:layout_alignBottom="@+id/note_2_quantity"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="false"
                android:layout_gravity="end"

                android:text="@string/dollar_2"
                android:textAlignment="textEnd"
                android:textSize="@dimen/text_size_large" />
        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/note_5_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:freezesText="true"
                android:hint="@string/enter_quantity"
                android:inputType="number"
                android:tag="5"
                android:textAlignment="textEnd"
                android:textSize="@dimen/text_size_large" />

            <TextView
                android:id="@+id/dollar_5"
                android:layout_width="@dimen/text_view_prefix_width"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/note_5_quantity"
                android:layout_alignBottom="@+id/note_5_quantity"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="false"
                android:layout_gravity="end"

                android:text="@string/dollar_5"
                android:textAlignment="textEnd"
                android:textSize="@dimen/text_size_large" />
        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/note_10_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:freezesText="true"
                android:hint="@string/enter_quantity"
                android:inputType="number"
                android:tag="10"
                android:textAlignment="textEnd"
                android:textSize="@dimen/text_size_large" />

            <TextView
                android:id="@+id/dollar_10"
                android:layout_width="@dimen/text_view_prefix_width"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/note_10_quantity"
                android:layout_alignBottom="@+id/note_10_quantity"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="false"
                android:layout_gravity="end"

                android:text="@string/dollar_10"
                android:textAlignment="textEnd"
                android:textSize="@dimen/text_size_large" />
        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/note_20_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:freezesText="true"
                android:hint="@string/enter_quantity"
                android:inputType="number"
                android:tag="20"
                android:textAlignment="textEnd"
                android:textSize="@dimen/text_size_large" />

            <TextView
                android:id="@+id/dollar_20"
                android:layout_width="@dimen/text_view_prefix_width"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/note_20_quantity"
                android:layout_alignBottom="@+id/note_20_quantity"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="false"
                android:layout_gravity="end"

                android:text="@string/dollar_20"
                android:textAlignment="textEnd"
                android:textSize="@dimen/text_size_large" />
        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/note_50_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:freezesText="true"
                android:hint="@string/enter_quantity"
                android:inputType="number"
                android:tag="50"
                android:textAlignment="textEnd"
                android:textSize="@dimen/text_size_large" />

            <TextView
                android:id="@+id/dollar_50"
                android:layout_width="@dimen/text_view_prefix_width"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/note_50_quantity"
                android:layout_alignBottom="@+id/note_50_quantity"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="false"
                android:layout_gravity="end"

                android:text="@string/dollar_50"
                android:textAlignment="textEnd"
                android:textSize="@dimen/text_size_large" />
        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/note_100_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:freezesText="true"
                android:hint="@string/enter_quantity"
                android:inputType="number"
                android:tag="100"
                android:textAlignment="textEnd"
                android:textSize="@dimen/text_size_large" />

            <TextView
                android:id="@+id/dollar_100"
                android:layout_width="@dimen/text_view_prefix_width"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/note_100_quantity"
                android:layout_alignBottom="@+id/note_100_quantity"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="false"
                android:layout_gravity="end"

                android:text="@string/dollar_100"
                android:textAlignment="textEnd"
                android:textSize="@dimen/text_size_large" />
        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/note_500_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:freezesText="true"
                android:hint="@string/enter_quantity"
                android:inputType="number"
                android:tag="500"
                android:textAlignment="textEnd"
                android:textSize="@dimen/text_size_large" />

            <TextView
                android:id="@+id/dollar_500"
                android:layout_width="@dimen/text_view_prefix_width"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/note_500_quantity"
                android:layout_alignBottom="@+id/note_500_quantity"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="false"
                android:layout_gravity="end"

                android:text="@string/dollar_500"
                android:textAlignment="textEnd"
                android:textSize="@dimen/text_size_large" />
        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/note_1000_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:freezesText="true"
                android:hint="@string/enter_quantity"
                android:inputType="number"
                android:tag="1000"
                android:textAlignment="textEnd"
                android:textSize="@dimen/text_size_large" />

            <TextView
                android:id="@+id/dollar_1000"
                android:layout_width="@dimen/text_view_prefix_width"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/note_1000_quantity"
                android:layout_alignBottom="@+id/note_1000_quantity"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="false"
                android:layout_gravity="end"

                android:text="@string/dollar_1000"
                android:textAlignment="textEnd"
                android:textSize="@dimen/text_size_large" />
        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/note_5000_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:freezesText="true"
                android:hint="@string/enter_quantity"
                android:inputType="number"
                android:tag="5000"
                android:textAlignment="textEnd"
                android:textSize="@dimen/text_size_large" />

            <TextView
                android:id="@+id/dollar_5000"
                android:layout_width="@dimen/text_view_prefix_width"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/note_5000_quantity"
                android:layout_alignBottom="@+id/note_5000_quantity"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="false"
                android:layout_gravity="end"

                android:text="@string/dollar_5000"
                android:textAlignment="textEnd"
                android:textSize="@dimen/text_size_large" />
        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/note_10000_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:freezesText="true"
                android:hint="@string/enter_quantity"
                android:inputType="number"
                android:tag="10000"
                android:textAlignment="textEnd"
                android:textSize="@dimen/text_size_large" />

            <TextView
                android:id="@+id/dollar_10000"
                android:layout_width="@dimen/text_view_prefix_width"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/note_10000_quantity"
                android:layout_alignBottom="@+id/note_10000_quantity"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="false"
                android:layout_gravity="end"

                android:text="@string/dollar_10000"
                android:textAlignment="textEnd"
                android:textSize="@dimen/text_size_large" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
